--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 publication_name: "Hormone Replacement Therapy "
 publication_sub_name: "England April 2015 to June 2024"
 publication_date: "17 October 2024"
-responsible_statistician: "Grace Libby"
+responsible_statistician: ""
 fy_excel_link: "https://nhsbsa-opendata.s3.eu-west-2.amazonaws.com/hrt/hrt_financial_year_2024_2025_YTD_June_2024_v001.xlsx"
 month_excel_link: "https://nhsbsa-opendata.s3.eu-west-2.amazonaws.com/hrt/hrt_monthly_June_2024_v001.xlsx"
 background_link: "https://nhsbsa-opendata.s3.eu-west-2.amazonaws.com/hrt/hrt-background-info-methodology-v002.html"
